# fft-image-compressor

./: .gitignore  CMakeLists.txt  README.md
src/: cli.cpp  compress.cpp  compress.hpp  decompress.cpp  decompress.hpp  fft.hpp  fftw_plan_manager.cpp  fftw_plan_manager.hpp  huffman.hpp  image.hpp  main.cpp  mask.hpp  quant.hpp  rle.hpp
